testimonial section updated

--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,7 @@ h3{
 
  #testimonials{
    text-align: center;
-   background-color: #ff4c68;
+   background-color: #ef8172;
  }
  .testimonial-img{
    border-radius: 100%;
@@ -110,7 +110,7 @@ em{
 
 /* Press Section */
 #press{
-  background-color: #ff4c68;
+  background-color: #ef8172;
   text-align: center;
 }
 
